# Createathon

./: README.md
backend/: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  temp_code.cpp.out
backend/challenges/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/challenges/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_options_alter_submission_options_and_more.py  0004_alter_userprogress_options_and_more.py  0005_remove_category_updated_at_and_more.py  0006_alter_submission_feedback_alter_submission_score_and_more.py  0007_alter_userprogress_options_and_more.py  0008_submission_test_results.py  0009_userprogress_attempts_userprogress_best_score_and_more.py  0010_userprogress_draft_code.py  0011_remove_userprogress_draft_code.py
backend/createathon/: asgi.py  settings.py  urls.py  wsgi.py
backend/temp/: temp_code.cpp.out
backend/users/: admin.py  models.py  serializers.py  signals.py  views.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_telegram_username_user_display_name_and_more.py  0003_refreshtoken.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AchievementCard.jsx  ChallengeCard.jsx  CodeEditor.jsx  Layout.jsx  ProgressChart.jsx  ProtectedRoute.jsx  YourComponent.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: ChallengeDetail.jsx  ChallengeList.jsx  CreateChallenge.jsx  Dashboard.jsx  Home.jsx  Leaderboard.jsx  Login.jsx  Profile.jsx  Register.jsx
(+2 files in other folders)
